# transactomatic

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: scheduled_audit.yml  workflow.yml
src/: cli.rs  lib.rs  main.rs
src/bank/: account.rs  mod.rs  transaction.rs
src/bank/transaction/: instruction.rs  mod.rs
tests/: column_reorder_in.csv  complex_in1.csv  complex_out1.csv  duplicate_transaction_id_in.csv  integration_test.rs  invalid_transaction_type_in.csv  multiple_resolves_in.csv  precision_greater_than_4_decimals_in.csv  resolve_on_different_account_in.csv  resolve_on_different_account_out.csv  simple_chargeback_in.csv  simple_chargeback_out.csv  simple_dispute_in.csv  simple_dispute_out.csv  simple_in1.csv  withdraw_neg_in.csv  withdraw_neg_out.csv
