[package]
authors = ["Brian Faga <brian@accidentaldevelopment.com>"]
edition = "2018"
name = "transactomatic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
log = "0.4"
pretty_env_logger = {version = "0.4", optional = true}
rust_decimal = "1.0"
serde = {version = "1", features = ["derive"]}

[features]
logging = ["pretty_env_logger"]
