[package]
authors = ["Brian Faga <brian@accidentaldevelopment.com>"]
edition = "2018"
name = "transactomatic"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rust_decimal = "1.12"
serde = {version = "1", features = ["derive"]}
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
